tests/fixtures/invalid/sorted_none.py
# Cannot call sorted() with None
x = sorted(None)
